--- a/functions/package.json
+++ b/functions/package.json
@@ -10,8 +10,11 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
+    "actions-on-google": "^1.10.0",
+    "apiai": "^4.0.3",
     "firebase-admin": "~5.10.0",
-    "firebase-functions": "^0.9.0"
+    "firebase-functions": "^0.9.0",
+    "root-nodejs": "github:jilow/root-nodejs"
   },
   "devDependencies": {
     "eslint": "^4.12.0",
