--- a/functions/package.json
+++ b/functions/package.json
@@ -3,6 +3,7 @@
   "description": "Cloud Functions for Firebase",
   "scripts": {
     "lint": "eslint .",
+    "standalone": "node standalone.js",
     "serve": "firebase serve --only functions",
     "shell": "firebase experimental:functions:shell",
     "start": "npm run shell",
@@ -12,8 +13,12 @@
   "dependencies": {
     "actions-on-google": "^1.10.0",
     "apiai": "^4.0.3",
+    "body-parser": "^1.18.2",
+    "express": "^4.16.3",
     "firebase-admin": "~5.10.0",
     "firebase-functions": "^0.9.0",
+    "request": "^2.85.0",
+    "request-promise-native": "^1.0.5",
     "root-nodejs": "github:jilow/root-nodejs"
   },
   "devDependencies": {
