--- a/functions/package.json
+++ b/functions/package.json
@@ -13,12 +13,12 @@
   "dependencies": {
     "actions-on-google": "^1.10.0",
     "apiai": "^4.0.3",
+    "axios": "^0.18.0",
     "body-parser": "^1.18.2",
+    "currency-formatter": "^1.4.2",
     "express": "^4.16.3",
     "firebase-admin": "~5.10.0",
     "firebase-functions": "^0.9.0",
-    "request": "^2.85.0",
-    "request-promise-native": "^1.0.5",
     "root-nodejs": "github:jilow/root-nodejs"
   },
   "devDependencies": {
